REGRESSION(r180279): It broke 20 tests on ARM Linux https://bugs.webkit.org/show_bug.cgi?id=141771

Reviewed by Filip Pizlo.

* dfg/DFGSpeculativeJIT.h:
(JSC::DFG::SpeculativeJIT::callOperation): Align 64-bit values to respect ARM EABI.


Canonical link: https://commits.webkit.org/159817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180345 268f45cc-cd09-0410-ab3c-d52691b4dbfc